--- a/.github/workflows/github-docker.yml
+++ b/.github/workflows/github-docker.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       REPOSITORY_URL: ghcr.io
-      IMAGE_NAME: oldtyt/vklike
+      IMAGE_NAME: oldtyt/vk-liker
     steps:
       - name: Checkout
         uses: actions/checkout@v3.3.0
